# RacOS

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/agents/: racos-gfx-terminal.agent.md  racos-launcher.agent.md
.github/instructions/: development.instructions.md
.github/prompts/: finalize.prompt.md
.github/workflows/: advanced-code-review.yml  ci.yml
boot/: Cargo.toml
boot/src/: elf.rs  lib.rs  main.rs
ci/: github-actions.yml
docs/: DEVELOPMENT_LINUX.md  DEVELOPMENT_WINDOWS.md  language-policy.md
docs/adr/: ADR-001-platform-x86_64-uefi.md  ADR-002-modular-monolithic-kernel.md  ADR-003-language-stack.md  ADR-004-boot-flow-image-format.md  ADR-005-syscall-abi-policy.md  ADR-006-process-thread-model.md  ADR-007-scheduler-mvp.md  ADR-008-memory-model.md  ADR-009-vfs-model.md  ADR-010-device-model.md  ADR-011-init-service-manager.md  ADR-012-unit-file-format.md  ADR-013-logging-journaling.md  ADR-014-tty-ptty-model.md  ADR-015-shell-grammar.md  ADR-016-terminal-architecture.md  ADR-017-package-format.md  ADR-018-repository-signing.md  ADR-019-security-baseline.md  ADR-020-release-compatibility.md
docs/architecture/: ARCHITECTURE.md
docs/screenshots/: README.md
docs/specs/: BOOT_FLOW.md  KERNEL_ABI.md  PACKAGE_FORMAT.md  RELEASE_POLICY.md  SECURITY_MODEL.md  SERVICE_MODEL.md  SHELL_GRAMMAR.md  SYSCALL_SPEC.md  TERMINAL_PROTOCOLS.md  TEST_STRATEGY.md
docs/superpowers/plans/: 2026-05-20-phase-1-cross-platform-build.md  2026-05-20-phase-2-kernel-correctness.md  2026-05-20-phase-3-tty-pack.md
docs/superpowers/specs/: 2026-05-20-cross-platform-build-and-kernel-correctness-design.md
init/: Cargo.toml
init/src/: engine.rs  lib.rs  main.rs
initramfs-root/sbin/: init
kernel/: Cargo.toml  build.rs  linker.ld  x86_64-racos.json
kernel/src/: boot.rs  elf.rs  fb_console.rs  main.rs  mod_loader.rs  panic.rs  print.rs  serial.rs  shell_fs.rs  sync.rs
kernel/src/arch/: acpi.rs  ap.rs  boot.asm  gdt.rs  idt.rs  lapic.rs  mod.rs  percpu.rs  smp.rs  trampoline.asm
kernel/src/drivers/: ahci.rs  block.rs  cache.rs  mod.rs  pci.rs  ps2_keyboard.rs  virtio_net.rs  virtqueue.rs
kernel/src/interrupts/: mod.rs  pic.rs  pit.rs
kernel/src/mm/: heap.rs  mod.rs  phys.rs  vdso.rs  virt.rs
kernel/src/net/: arp.rs  dns.rs  eth.rs  icmp.rs  ipv4.rs  mod.rs  stack.rs  tcp.rs  udp.rs
kernel/src/security/: capability.rs  dac.rs  mod.rs
kernel/src/syscall/: dispatch.rs  entry.rs  error.rs  handlers.rs  mod.rs
kernel/src/task/: context.rs  mod.rs  process.rs  scheduler.rs  signal.rs  task.rs  thread.rs
kernel/src/tty/: line_discipline.rs  mod.rs  pty.rs  tty.rs  vt.rs
kernel/src/vfs/: devfs.rs  fat32.rs  file.rs  initramfs.rs  inode.rs  mod.rs  mount.rs  pipe.rs  procfs.rs  racfs.rs  socket.rs  tmpfs.rs
libs/libc-lite/: Cargo.toml
libs/libc-lite/src/: lib.rs
libs/libcore-user/: Cargo.toml
libs/libcore-user/src/: lib.rs
pkg/rapt/: Cargo.toml
pkg/rapt-bin/: Cargo.toml
pkg/rapt-bin/src/: main.rs
pkg/rapt/src/: lib.rs
pkg/rpkg/: Cargo.toml
pkg/rpkg-bin/: Cargo.toml
pkg/rpkg-bin/src/: main.rs
pkg/rpkg/src/: lib.rs
scripts/: boot-test.sh  build-image.ps1  build-image.sh  launch-interactive.ps1  make-image.ps1  make-image.sh  make-iso.ps1  make-iso.sh  pack-initramfs.ps1  pack-initramfs.py  run-ci-smoke.ps1  run-demo-tests.ps1  run-qemu.ps1  runtime-validation-interactive.ps1  runtime-validation.ps1  validate-direct-boot.ps1  validate-esp-boot.ps1  validate-runtime.ps1  validate-system.ps1
shell/: Cargo.toml
shell/src/: ast.rs  builtin.rs  exec.rs  expand.rs  lexer.rs  lib.rs  parser.rs  readline.rs  token.rs
terminal/: Cargo.toml
terminal/src/: buffer.rs  cursor.rs  escape.rs  input.rs  lib.rs  main.rs  terminal.rs
tests/integration/: init_lifecycle.rs  vfs_syscalls.rs
tests/unit/: allocator.rs  scheduler.rs  shell_parser.rs  syscalls.rs
userland/coreutils/awk/: Cargo.toml
userland/coreutils/awk/src/: main.rs
userland/coreutils/basename/: Cargo.toml
userland/coreutils/basename/src/: main.rs
userland/coreutils/cat/: Cargo.toml
userland/coreutils/cat/src/: main.rs
userland/coreutils/cp/: Cargo.toml
userland/coreutils/cp/src/: main.rs
userland/coreutils/cut/: Cargo.toml
userland/coreutils/cut/src/: main.rs
userland/coreutils/df/: Cargo.toml
userland/coreutils/df/src/: main.rs
userland/coreutils/dirname/: Cargo.toml
userland/coreutils/dirname/src/: main.rs
userland/coreutils/echo/: Cargo.toml
userland/coreutils/echo/src/: main.rs
userland/coreutils/env/: Cargo.toml
userland/coreutils/env/src/: main.rs
userland/coreutils/false/: Cargo.toml
userland/coreutils/false/src/: main.rs
userland/coreutils/find/: Cargo.toml
userland/coreutils/grep/: Cargo.toml
userland/coreutils/head/: Cargo.toml
userland/coreutils/hello/: Cargo.toml
userland/coreutils/hexdump/: Cargo.toml
userland/coreutils/id/: Cargo.toml
userland/coreutils/init/: Cargo.toml
userland/coreutils/ls/: Cargo.toml
userland/coreutils/mkdir/: Cargo.toml
userland/coreutils/mkfs-fat32/: Cargo.toml
userland/coreutils/mkfs-fat32/src/: main.rs
userland/coreutils/mkfs-racfs/: Cargo.toml
userland/coreutils/mkfs-racfs/src/: main.rs
userland/coreutils/mount/: Cargo.toml
userland/coreutils/mv/: Cargo.toml
userland/coreutils/od/: Cargo.toml
userland/coreutils/ps/: Cargo.toml
userland/coreutils/rm/: Cargo.toml
userland/coreutils/sed/: Cargo.toml
userland/coreutils/sh/: Cargo.toml
userland/coreutils/sleep/: Cargo.toml
userland/coreutils/sort/: Cargo.toml
userland/coreutils/sync/: Cargo.toml
userland/coreutils/tail/: Cargo.toml
userland/coreutils/tee/: Cargo.toml
userland/coreutils/test/: Cargo.toml
userland/coreutils/top/: Cargo.toml
userland/coreutils/true/: Cargo.toml
userland/coreutils/umount/: Cargo.toml
userland/coreutils/uniq/: Cargo.toml
userland/coreutils/uptime/: Cargo.toml
userland/coreutils/wc/: Cargo.toml
userland/network/dig/: Cargo.toml
userland/network/netloop/: Cargo.toml
userland/network/wget/: Cargo.toml
(+31 files in other folders)
