[workspace]
resolver = "2"
members = [
    "kernel",
    "boot",
    "init",
    "libs/libc-lite",
    "libs/libcore-user",
    "shell",
    "terminal",
    "pkg/rpkg",
    "pkg/rapt",
    "userland/coreutils/hello",
    "userland/coreutils/echo",
    "userland/coreutils/cat",
    "userland/coreutils/true",
    "userland/coreutils/false",
    "userland/coreutils/sh",
    "userland/coreutils/init",
    "userland/coreutils/test",
    "userland/coreutils/ls",
    "userland/coreutils/wc",
    "userland/coreutils/uptime",
    "userland/coreutils/mkdir",
    "userland/coreutils/rm",
    "userland/coreutils/sleep",
    "userland/coreutils/head",
    "userland/coreutils/tail",
    "userland/coreutils/env",
    "userland/coreutils/id",
    "userland/coreutils/basename",
    "userland/coreutils/dirname",
    "userland/coreutils/grep",
    "userland/coreutils/cp",
    "userland/coreutils/mv",
    "userland/coreutils/cut",
    "userland/coreutils/uniq",
    "userland/coreutils/find",
    "userland/coreutils/od",
    "userland/coreutils/tee",
    "userland/coreutils/hexdump",
    "userland/network/netloop",
    "userland/network/dig",
    "userland/network/wget",
    "userland/coreutils/mount",
    "userland/coreutils/df",
    "userland/coreutils/umount",
    "userland/coreutils/mkfs-racfs",
    "userland/coreutils/mkfs-fat32",
    "userland/coreutils/sync",
]
default-members = [
    "init",
    "libs/libc-lite",
    "libs/libcore-user",
    "shell",
    "terminal",
    "pkg/rpkg",
    "pkg/rapt",
    "userland/coreutils/hello",
    "userland/coreutils/echo",
    "userland/coreutils/cat",
    "userland/coreutils/true",
    "userland/coreutils/false",
    "userland/coreutils/sh",
    "userland/coreutils/init",
    "userland/coreutils/test",
    "userland/coreutils/ls",
    "userland/coreutils/wc",
    "userland/coreutils/uptime",
    "userland/coreutils/mkdir",
    "userland/coreutils/rm",
    "userland/coreutils/sleep",
    "userland/coreutils/head",
    "userland/coreutils/tail",
    "userland/coreutils/env",
    "userland/coreutils/id",
    "userland/coreutils/basename",
    "userland/coreutils/dirname",
    "userland/coreutils/grep",
    "userland/coreutils/cp",
    "userland/coreutils/mv",
    "userland/coreutils/cut",
    "userland/coreutils/uniq",
    "userland/coreutils/find",
    "userland/coreutils/od",
    "userland/coreutils/tee",
    "userland/coreutils/hexdump",
    "userland/network/netloop",
    "userland/network/dig",
    "userland/network/wget",
    "userland/coreutils/mount",
    "userland/coreutils/df",
    "userland/coreutils/umount",
    "userland/coreutils/mkfs-racfs",
    "userland/coreutils/mkfs-fat32",
    "userland/coreutils/sync",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
repository = ""

# Workspace-wide lint policy. Packages opt in via `[lints] workspace = true`
# in their own Cargo.toml. The kernel, bootloader, libc-lite, and other
# crates that need raw unsafe blocks for hardware/ABI/memory work do opt
# in — `unsafe_op_in_unsafe_fn = "deny"` only changes *style* (every
# unsafe op must sit in its own `unsafe { ... }` block, even inside an
# `unsafe fn`), it doesn't outlaw unsafe code. Pure-safe userland
# binaries instead use `#![forbid(unsafe_code)]` in their own source
# file because that's a stronger guarantee than a workspace deny.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[profile.dev]
panic = "abort"
opt-level = 0
relocation-model = "static"

[profile.release]
panic = "abort"
opt-level = 2
lto = false
strip = "symbols"
relocation-model = "static"
